src/components/Products.css
.products-container {
  font-family: 'Montserrat';
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 0;
}

.products-container h1 {
  text-align: center;
  padding-top: 2rem;
  font-family: 'secular one';
  letter-spacing: 0.4rem;
  text-transform: uppercase;
}

.outdoor-content {
  border: solid #778a77 5px;
  background-color: #778a77;
  color: #fff;
  display: flex;
  flex-direction: column;
  background-color: #778a77;
  color: #fff;
  width: 100%;
}

.outdoor-content h2 {
  font-size: 1.3rem;
  text-align: center;
  padding-top: 1rem;
  font-family: 'secular one';
  letter-spacing: 0.4rem;
  text-transform: uppercase;
}
.outdoor-text {
  font-size: 1rem;
  padding-top: 0.5rem;
  padding-left: 2rem;
  padding-right: 2rem;
  text-align: center;
  font-family: 'poppins';
}

.pt-content {
  background-color: #778a77;
  color: #fff;
  display: flex;
  flex-direction: column;
  background-color: #778a77;
  color: #fff;
  width: 100%;
}

.pt-content h2 {
  font-size: 1.3rem;
  text-align: center;
  padding-top: 1rem;
  font-family: 'secular one';
  letter-spacing: 0.4rem;
  text-transform: uppercase;
}
.pt-text {
  font-size: 1rem;
  padding-top: 0.5rem;
  padding-left: 2rem;
  padding-right: 2rem;
  text-align: center;
  font-family: 'poppins';
}

.quote-content {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: 1rem;
}

.quote-text {
  font-size: 1rem;
  text-align: center;
  width: 75%;
  font-family: 'poppins';
}

.collapse-section {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem;
  text-align: center;
}

@media (min-width: 768px) {
  .products-container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0;
    gap: 0.5rem;
  }
  .outdoor-content {
    display: flex;
    background-color: #778a77;
    color: #fff;
    width: 80%;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border: none;
  }
  .outdoor-content h2 {
    text-align: center;
  }
  .outdoor-text {
    text-align: center;
    padding: 1rem;
    font-size: 1rem;
  }
  .outdoor-content img {
    height: 400px;
    width: 300px;
    padding-bottom: 0.5rem;
  }

  .pt-content {
    display: flex;
    background-color: #778a77;
    color: #fff;
    width: 80%;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border: none;
  }
  .pt-content h2 {
    text-align: center;
  }
  .pt-text {
    text-align: center;
    padding: 1rem;
    font-size: 1rem;
  }

  .pt-content img {
    height: 400px;
    width: 300px;
    padding-bottom: 0.5rem;
  }

  .quote {
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 1rem;
  }

  .quote-text {
    font-size: 1.2rem;
    text-align: center;
    width: 75%;
  }
}

@media (min-width: 1024px) {
  .products-container {
    padding: 0 2rem;
    gap: 1rem;
  }
  .outdoor-text {
    text-align: center;
    padding: 1rem;
    font-size: 1.5rem;
  }

  .outdoor-content {
    width: 100%;
    background-color: #fff;
    color: black;
    border: solid 5px #778a77;
  }
  .outdoor-content img {
    height: 600px;
    width: 400px;

    padding-bottom: 0;
  }
  .outdoor-content h2 {
    text-align: start;
    font-size: 2.5rem;
  }
  .pt-content {
    flex-direction: row-reverse;
    width: 100%;
    background-color: #fff;
    color: black;
    border: solid 5px #778a77;
  }
  .pt-content h2 {
    font-size: 2.5rem;
    text-align: start;
  }
  .pt-text {
    text-align: start;
    padding: 1rem;
    font-size: 1.5rem;
  }
  .pt-content img {
    height: 600px;
    width: 400px;

    padding-bottom: 0;
  }
  .quote-text {
    font-size: 1.5rem;
    text-align: center;
    width: 75%;
    padding: 2rem;
  }
}

@media (min-width: 1440px) {
  .products-container {
    padding: 0 2rem;
    gap: 1rem;
  }
  .outdoor-content {
    width: 100%;
  }
  .outdoor-text {
    text-align: start;
    padding: 4rem;
    font-size: 1.5rem;
  }
  .outdoor-content img {
    height: 600px;
    width: 400px;

    padding-bottom: 0;
  }
  .pt-content {
    width: 100%;
  }
  .pt-text {
    text-align: start;
    padding: 4rem;
    font-size: 1.5rem;
  }
  .pt-content img {
    height: 600px;
    width: 400px;
    padding-bottom: 0;
  }
  .quote-text {
    font-size: 1.5rem;
    text-align: center;
    width: 75%;
    padding: 2rem;
  }
}

